Formated/added spacing & "//comments **********"  to improve readability. Fixed link for "root/path/file.ext" on Edit, Delete, Copy, Rename File pages   (It wasn't working after implemented "chdir(DOCUMENT_ROOT)" <b>$filename</b> in $messages Tweaked wording on Other page a bit.

--- a/onefilecms.css
+++ b/onefilecms.css
@@ -224,7 +224,7 @@ form .meta { z-index: -1; }
 	border: 1px solid #807568;
 	padding: 2px;
 	width: 650px;
-	font: 12px/18px "Courier New", Courier, monospace;
+	font: 1.3em "Courier New", Courier, monospace;
 }
 
 textarea.textinput {
@@ -272,8 +272,8 @@ h1 a:visited { color: #0F0901; }
 .nav {
 	float     : right;
 	display   : inline-block;
-	margin-top: 1.2em;
-	font-size :  1em;
+	margin-top: .8em;
+	font-size :  1.2em;
 	}
 
 .nav a {
@@ -323,6 +323,7 @@ h1 a:visited { color: #0F0901; }
 .path:hover { border: 1px solid #807568; background-color: #fffbce; }
 
 
+/* --- --- --- */
 hr { 
 	line-height  : 0;
 	font-size    : 1px;
